RESOLVED FIXED99733
[BlackBerry] Crash in InRegionScrollableArea constructor while loading page
https://bugs.webkit.org/show_bug.cgi?id=99733
Summary [BlackBerry] Crash in InRegionScrollableArea constructor while loading page
John Griggs
Reported 2012-10-18 10:47:31 PDT
To reproduce: Attempt to load the following URL: http://thechive.com/girl-steps-up-to-a-karaoke-machine-and-shocks-the-hell-out-of-everyone-video/ Result: Segmentation fault in InRegionScrollableArea constructor before page is completely loaded. Note: This issue is specific to BlackBerry.
Attachments
Patch (1.67 KB, patch)
2012-10-18 12:13 PDT, John Griggs
no flags
John Griggs
Comment 1 2012-10-18 12:13:10 PDT
WebKit Review Bot
Comment 2 2012-10-18 12:53:43 PDT
Comment on attachment 169448 [details] Patch Clearing flags on attachment: 169448 Committed r131793: <http://trac.webkit.org/changeset/131793>
WebKit Review Bot
Comment 3 2012-10-18 12:53:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.