Crash in InRegionScrollableArea constructor while loading page https://bugs.webkit.org/show_bug.cgi?id=99733

Patch by John Griggs <jgriggs@rim.com> on 2012-10-18
Reviewed by Antonio Gomes.

Check scrollLayer and avoid constructing InRegionScrollableArea when it is NULL.

* Api/InRegionScroller.cpp:
(BlackBerry::WebKit::InRegionScrollerPrivate::calculateInRegionScrollableAreasForPoint):

git-svn-id: svn://svn.chromium.org/blink/trunk@131793 bbb929c8-8fbe-4397-9dbb-9b2b20218538