third_party/WebKit/Source/WebKit/blackberry/Api/InRegionScroller.cpp
@@ -220,6 +220,9 @@ void InRegionScrollerPrivate::calculateInRegionScrollableAreasForPoint(const Web
                     return;
                 }
 
+                if (!renderView->compositor()->scrollLayer())
+                    continue;
+
                 if (canScrollInnerFrame(view->frame())) {
                     pushBackInRegionScrollable(new InRegionScrollableArea(m_webPage, layer));
                     continue;
